added navbar and edited footer to be '© 2020 Eymankun' only.

--- a/index.html
+++ b/index.html
@@ -9,35 +9,63 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+  <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js"
+    integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl"
+    crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 
 <body>
   <header>
+    <div class="container">
+      <nav class="navbar navbar-expand-lg navbar-light primary-color">
+        <a href="index.html" class="navbar-brand">EymanKun</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav"
+          aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="mainNav">
+          <ul class="navbar-nav">
+            <li class="navbar-item">
+              <a href="#" class="nav-link">Home</a>
+            </li>
+            <li class="navbar-item">
+              <a href="#about" class="nav-link">About</a>
+            </li>
+            <li class="navbar-item">
+              <a href="#portfolio" class="nav-link">Portfolio</a>
+            </li>
+          </ul>
 
+          <ul class="navbar-nav ml-auto nav-flex-icon">
+            <li class="navbar-item">
+              <a href="https://www.twitter.com/eyman_kunn" class="btn btn-social-icon btn-twitter" target="_blank">
+                <i class="fab fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+              </a>
+            </li>
+            <li class="navbar-item">
+              <a href="https://www.github.com/eymankun" class="btn btn-social-icon btn-github" target="_blank">
+                <i class="fab fa-github fa-lg white-text mr-md-5 mr-5 fa-2x" aria-hidden="true"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
   </header>
 
   <main>
 
   </main>
 
-  <footer class="page-footer font-small grey ">
+  <footer class="bg-dark text-white mt-5 text-center text-sm-left">
     <div class="container">
-      <div class="row">
-        <div class="col-md-12 py-5">
-          <div class="mb-5 flex-center">
-            <!--Facebook-->
-            <a class="tw-ic">
-              <i class="fab fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
-            </a>
-          </div>
-        </div>
-      </div>
       <div class="footer-copyright text-center py-3" style="color: white;">
         © 2020 EymanKun
       </div>
     </div>
   </footer>
+
 </body>
 
 </html>
