added jumbotrom header and profile picture.

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
 </head>
 
 <body>
+  <!--Header-->
   <header>
     <div class="container">
+      <!--Navbar-->
       <nav class="navbar navbar-expand-lg navbar-light primary-color">
         <a href="index.html" class="navbar-brand">EymanKun</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNav"
@@ -36,7 +38,8 @@
               <a href="#portfolio" class="nav-link">Portfolio</a>
             </li>
           </ul>
-
+          <!--Navbar-->
+          <!--Social media icon-->
           <ul class="navbar-nav ml-auto nav-flex-icon">
             <li class="navbar-item">
               <a href="https://www.twitter.com/eyman_kunn" class="btn btn-social-icon btn-twitter" target="_blank">
@@ -49,15 +52,36 @@
               </a>
             </li>
           </ul>
+          <!--Social media icon-->
         </div>
       </nav>
     </div>
   </header>
 
   <main>
+    <!--Page header-->
+    <div class="jumbotron jumbotron-fluid text-center">
+      <div class="container">
+        <img src="img/eyman2.jpg" alt="" width="100" class="rounded-circle img-thumbnail">
+        <h1 class="display-3">EymanKun</h1>
+        <p class="lead"></p>
+        <hr class="my-2">
+        <p>Heavy Tea Drinker | Web Dev Newbie | LoFi Music Enthusiast</p>
+        <p class="lead">
+          <a class="btn btn-primary btn-md" href="https://www.github.com/eymankun" role="button" target="_blank">
+            Github Page
+          </a>
+        </p>
+      </div>
+    </div>
+    <!--Page header-->
 
+    <section class="about" id="about">
+
+    </section>
   </main>
 
+  <!--Footer-->
   <footer class="bg-dark text-white mt-5 text-center text-sm-left">
     <div class="container">
       <div class="footer-copyright text-center py-3" style="color: white;">
