added page header & about section. next need to add portfolio and contact.

--- a/index.html
+++ b/index.html
@@ -58,28 +58,38 @@
     </div>
   </header>
 
-  <main>
-    <!--Page header-->
-    <div class="jumbotron jumbotron-fluid text-center">
-      <div class="container">
-        <img src="img/eyman2.jpg" alt="" width="100" class="rounded-circle img-thumbnail">
-        <h1 class="display-3">EymanKun</h1>
-        <p class="lead"></p>
-        <hr class="my-2">
-        <p>Heavy Tea Drinker | Web Dev Newbie | LoFi Music Enthusiast</p>
-        <p class="lead">
-          <a class="btn btn-primary btn-md" href="https://www.github.com/eymankun" role="button" target="_blank">
-            Github Page
-          </a>
-        </p>
+
+  <!--Page header-->
+  <div class="jumbotron jumbotron-fluid text-center">
+    <div class="container ">
+      <img src="img/eyman2.jpg" alt="" width="100" class="rounded-circle img-thumbnail">
+      <h1 class="display-3">EymanKun</h1>
+      <p class="lead"></p>
+      <hr class="my-2">
+      <p>Heavy Tea Drinker | Japanese Speaker | LoFi Music Enthusiast</p>
+      <p class="lead">
+        <a class="btn btn-primary btn-md" href="https://www.github.com/eymankun" role="button" target="_blank">
+          Github Page
+        </a>
+      </p>
+    </div>
+  </div>
+  <!--Page header-->
+
+  <section class="about" id="about">
+    <div class="container row-mb-4">
+      <div class="col text-center">
+        <h2>About</h2>
+      </div>
+      <div class="row justify-content-center">
+        <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro pariatur nam
+          exercitationem id accusamus
+          placeat ullam ratione saepe magnam officiis, distinctio quaerat fugiat, harum cum. Consequatur adipisci quia
+          non tempora.</p>
       </div>
     </div>
-    <!--Page header-->
+  </section>
 
-    <section class="about" id="about">
-
-    </section>
-  </main>
 
   <!--Footer-->
   <footer class="bg-dark text-white mt-5 text-center text-sm-left">
@@ -89,6 +99,7 @@
       </div>
     </div>
   </footer>
+  <!--Footer-->
 
 </body>
 
