--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
   </div>
   <!--Page header-->
 
-  <section class="about" id="about">
+  <!--About-->
+  <section class="about mb-4" id="about">
     <div class="container row-mb-4">
       <div class="col text-center">
         <h2>About</h2>
@@ -89,6 +90,54 @@
       </div>
     </div>
   </section>
+  <!--About-->
+
+  <!--Portfolio-->
+  <section class="portfolio bg-light">
+    <div class="container">
+      <div class="row pt-4 mb-4">
+        <div class="col text-center">
+          <h2>Portfolio</h2>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md mb-4">
+
+          <div class="card-deck">
+            <div class="card">
+              <img class="card-img-top" src="img/tea.png" alt="">
+              <div class="card-body">
+                <h4 class="card-title">Tea-Coding</h4>
+                <p class="card-text">Tea-Coding landing page. Created by using HTML, CSS, and Bootstrap4.</p>
+              </div>
+            </div>
+            <div class="card">
+              <img class="card-img-top" src="holder.js/100x180/" alt="">
+              <div class="card-body">
+                <h4 class="card-title">In Progress</h4>
+                <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus ab temporibus natus
+                  optio autem, necessitatibus fuga suscipit earum veniam dolores fugiat. Repellat facilis ipsa eaque qui
+                  sit porro laborum ipsam.</p>
+              </div>
+            </div>
+            <div class="card">
+              <img class="card-img-top" src="holder.js/100x180/" alt="">
+              <div class="card-body">
+                <h4 class="card-title">In Progress</h4>
+                <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus praesentium nam
+                  officia libero alias saepe, quia delectus ducimus deleniti deserunt accusantium facilis illum
+                  voluptatibus obcaecati minus ipsa, quod dolore et!</p>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+    </div>
+  </section>
+  <!--Portfolio-->
 
 
   <!--Footer-->
