--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl"
     crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css" href="css/main.css">
+
 </head>
 
 <body>
@@ -62,7 +63,9 @@
   <!--Page header-->
   <div class="jumbotron jumbotron-fluid text-center">
     <div class="container ">
-      <img src="img/eyman2.jpg" alt="" width="100" class="rounded-circle img-thumbnail">
+      <a href="https://www.github.com/eymankun" target="_blank">
+        <img src="img/eyman2.jpg" alt="" width="100" class="rounded-circle img-thumbnail">
+      </a>
       <h1 class="display-3">EymanKun</h1>
       <p class="lead"></p>
       <hr class="my-2">
@@ -93,7 +96,7 @@
   <!--About-->
 
   <!--Portfolio-->
-  <section class="portfolio bg-light">
+  <section class="portfolio bg-light" id="portfolio">
     <div class="container">
       <div class="row pt-4 mb-4">
         <div class="col text-center">
@@ -115,19 +118,15 @@
             <div class="card">
               <img class="card-img-top" src="holder.js/100x180/" alt="">
               <div class="card-body">
-                <h4 class="card-title">In Progress</h4>
-                <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus ab temporibus natus
-                  optio autem, necessitatibus fuga suscipit earum veniam dolores fugiat. Repellat facilis ipsa eaque qui
-                  sit porro laborum ipsam.</p>
+                <h4 class="card-title">Project is in progress</h4>
+                <p class="card-text">Coming soon!</p>
               </div>
             </div>
             <div class="card">
               <img class="card-img-top" src="holder.js/100x180/" alt="">
               <div class="card-body">
-                <h4 class="card-title">In Progress</h4>
-                <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus praesentium nam
-                  officia libero alias saepe, quia delectus ducimus deleniti deserunt accusantium facilis illum
-                  voluptatibus obcaecati minus ipsa, quod dolore et!</p>
+                <h4 class="card-title">Project is in progress</h4>
+                <p class="card-text">Coming soon!</p>
               </div>
             </div>
           </div>
