--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@
   </footer>
   <!--Footer-->
 
+  <!--Top page button-->
+  <a href="#" id="back-to-top" class="btn btn-light btn-lg back-to-top" role="button">
+    <i class="fa fa-chevron-up" aria-hidden="true"></i>
+  </a>
+
 </body>
 
 </html>
