--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
           <div class="card-deck">
             <div class="card">
-              <img class="card-img-top" src="img/tea.png" alt="">
+              <img class="card-img-top" src="./img/tea-coding.png" alt="">
               <div class="card-body">
                 <h4 class="card-title">Tea-Coding</h4>
                 <p class="card-text">Tea-Coding landing page. Created by using HTML, CSS, and Bootstrap4.</p>
@@ -151,8 +151,10 @@
 
   <!--Top page button-->
   <a href="#" id="back-to-top" class="btn btn-light btn-lg back-to-top" role="button">
-    <i class="fa fa-chevron-up" aria-hidden="true"></i>
+    <i class="fa fa-chevron-up"></i>
   </a>
+
+  <script src="./scripts/top-button.js"></script>
 
 </body>
 
