edited 'About' box description. changed about box width.

--- a/index.html
+++ b/index.html
@@ -86,10 +86,11 @@
         <h2>About</h2>
       </div>
       <div class="row justify-content-center">
-        <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro pariatur nam
-          exercitationem id accusamus
-          placeat ullam ratione saepe magnam officiis, distinctio quaerat fugiat, harum cum. Consequatur adipisci quia
-          non tempora.</p>
+        <p class="text-center col-md-8">I'm Eyman, and welcome to my profile. I just started learing about web
+          development on
+          March 2020.
+          I enjoy creating user-centric, delightful web pages/applications. Currently learning Bootstrap4, JavaScript
+          and PHP.</p>
       </div>
     </div>
   </section>
