added link to teacoding

--- a/index.html
+++ b/index.html
@@ -109,9 +109,12 @@
 
           <div class="card-deck">
             <div class="card">
-              <img class="card-img-top" src="./img/tea-coding.png" alt="">
+              <a href="https://eymankun.github.io/teacoding" target="_blank"><img class="card-img-top"
+                  src="./img/tea-coding.png" alt=""></a>
               <div class="card-body">
-                <h4 class="card-title">Tea-Coding</h4>
+                <h4 class="card-title">
+                  Tea-Coding
+                </h4>
                 <p class="card-text">Tea-Coding landing page. Created by using HTML, CSS, and Bootstrap4.</p>
               </div>
             </div>
