--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl"
     crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css" href="css/main.css">
-
+  <link rel="shortcut icon" href="img/tea.png" type="image/x-icon">
 </head>
 
 <body>
