--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <hr class="my-2">
       <p>Heavy Tea Drinker | Japanese Speaker | LoFi Music Enthusiast</p>
       <p class="lead">
-        <a class="btn btn-primary btn-md" href="https://www.github.com/eymankun" role="button" target="_blank">
+        <a class="btn btn-dark btn-md" href="https://www.github.com/eymankun" role="button" target="_blank">
           Github Page
         </a>
       </p>
